Fix shifting navbar links w/ inheritance

--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -7,40 +7,9 @@
 
 nav.nav-container {
   background-color: #21252E;
-  display: flex;
-  flex-direction: column;
   width: 100%;
   height: 8vh;
   z-index: 99;
-}
-
-@media screen and (max-width: 700px) {
-
-  nav.nav-container {
-    position: fixed;
-    top: 0;
-  }
-}
-
-nav.fixed.desk {
-  animation: popDown 0.5s;
-}
-
-@keyframes popDown {
-  0% {
-    transform: translateY(-100px);
-  }
-}
-
-nav.fixed {
-  top: 0;
-  left: 0;
-  bottom: inherit;
-  position: fixed;
-}
-
-.link-wrap {
-  position: initial;
 }
 
 nav .nav-links {
@@ -52,9 +21,7 @@ nav .nav-links {
 
 nav .active {
   color: #df1862;
-  text-shadow: 1.3px 1.3px 2.1px #85758B, 0 0 1em #C7C3C9, 0 0 0.2em #C7C3C9;
 }
-
 
 .desk-nav {
   align-self: flex-start;
@@ -65,36 +32,25 @@ nav .active {
   flex-direction: row;
 }
 
-.desk-nav > ul.nav-links > li.menu-item {
-  padding: 5%;
-  margin: 1%;
-  text-align: center;
-  font-size: 2em;
+.desk-nav > ul {
+  margin: 10%;
 }
 
-.desk-nav > ul.nav-links > li.menu-item:hover {
-  color: cyan;
+.menu-item {
+  margin: inherit;
 }
 
 .page-link {
   text-decoration: none;
-  padding: 8%;
   color: #9F96A3;
-  transition: color 0.5s;
-} 
-  /* 
-  width: 100%;
-  display: inline-flex;
-  text-align: center;
-  font-size: 1.1em;
   font-weight: 100;
-  margin: 0 2%;
-  padding: 0 auto;
-*/
+  width: 100%;
+  font-size: 1em;  
+} 
 
 .page-link:hover {
   color: #df1862;
-  text-shadow: #eee 2px 0 5px;
+  text-shadow: 1.3px 1.3px 2.1px #85758B, 0 0 1em #C7C3C9, 0 0 0.2em #C7C3C9;
 }
 
 .mobile-nav {
@@ -105,7 +61,7 @@ nav .active {
   align-items: center;
 }
 
-.mobile-nav > ul.nav-links {
+.mobile-nav ul.nav-links {
   position: fixed;
   padding: 2%;
   top: 53px;
@@ -128,9 +84,6 @@ nav .active {
   .mobile-nav > ul.nav-links > li.menu-item {
     font-size: 1.5em;
   }
-}
-
-.mobile-nav > ul.nav-links > li.menu-item > a.page-link {
 }
 
 .mobile-nav > button > i.hamburger {
